unpackaged/main/default/objects/bt_base__Branding_Setting__c/bt_base__Branding_Setting__c.object-meta.xml
<CustomObject>
    <label>Branding Setting</label>
    <nameField>
        <label>Branding Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branding Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>