unpackaged/main/default/objects/bt_base__Branding_Setting__c/fields/bt_base__Custom_CSS_URL__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Custom_CSS_URL__c</fullName>
    <label>Custom CSS URL</label>
    <type>Url</type>
</CustomField>