unpackaged/main/default/objects/bt_base__Branding_Setting__c/fields/bt_base__Custom_Label_2__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Custom_Label_2__c</fullName>
    <label>Custom Label 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>