unpackaged/main/default/objects/bt_base__Branding_Setting__c/fields/bt_base__Custom_URL_1__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Custom_URL_1__c</fullName>
    <label>Custom URL 1</label>
    <type>Url</type>
</CustomField>