unpackaged/main/default/objects/bt_base__Branding_Setting__c/fields/bt_base__Default__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>