unpackaged/main/default/objects/bt_base__Branding_Setting__c/fields/bt_base__Language_Selector__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Language_Selector__c</fullName>
    <description>Controls if the Language Selector is shown in the Web App.</description>
    <inlineHelpText>Set Language Selector to &quot;No&quot; to hide it from your Store pages.</inlineHelpText>
    <label>Language Selector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>