unpackaged/main/default/objects/bt_base__Branding_Setting__c/fields/bt_base__Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Primary_Color__c</fullName>
    <label>Primary Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>