unpackaged/main/default/objects/bt_base__Branding_Setting__c/fields/bt_base__Source_Language__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Source_Language__c</fullName>
    <inlineHelpText>Set the Language of your Store’s text. Can be used with or without Language Selector. If left blank, the source language will be English.</inlineHelpText>
    <label>Source Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>bt_base__Supported_Languages</valueSetName>
    </valueSet>
</CustomField>