unpackaged/main/default/objects/bt_base__Branding_Setting__c/fields/bt_base__Supported_Languages__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Supported_Languages__c</fullName>
    <inlineHelpText>By default, English is supported. If Language Selector = Yes, select the languages you&#39;d like to show in the selector.</inlineHelpText>
    <label>Supported Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>bt_base__Supported_Languages</valueSetName>
    </valueSet>
</CustomField>