unpackaged/main/default/objects/bt_base__Branding_Setting__c/fields/bt_base__Target_Language__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Target_Language__c</fullName>
    <inlineHelpText>Set the language the Store will translate to by default on load.</inlineHelpText>
    <label>Target Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>bt_base__Supported_Languages</valueSetName>
    </valueSet>
</CustomField>