unpackaged/main/default/objects/bt_base__Branding_Setting__c/fields/bt_base__Theme__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Theme__c</fullName>
    <label>Theme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>